--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,42 @@ img {
   background-color: #428bca;
   border-radius: 50%;
   padding: 30px;
-  margin-top: 40px;
 }
 
 .grey {
   background-color: #f9f9f9;
+  width: 100vw;
 }
 
-h1, h3, p{
-  margin: 1em 0;
+/* NECESSARI DATO CHE NELL'ORIGINALE NON C'E' IL RESET E QUINDI LE DISTANZE SONO SETTATA DI DEFAULT DAL BROWSER */
+h1, h3, p, hr{
+  margin-bottom: 1em;
+}
+
+@media all and (max-width: 768px) {
+  body{
+    background-color: #d1d1b1;
+  }
+  .container:nth-child(2) {
+  background: white;
+  }
+  .grey{
+    background-color: rgba(255, 0, 0, 0);
+  }
+  .container{
+    margin: 0;
+  }
+  h1, h3, p,{
+    margin: 0;
+  }
+  hr{
+    width: 95%;
+    margin: 0 auto 1rem;
+    border: 1px solid black;
+  }
+
+  img{
+    height: 120px;
+    width: auto;
+  }
 }
